sterlang/examples/pos/src/sink.erlt
-module(sink).
-export([sink/1]).

-spec sink(_) -> {}.
sink(_) -> {}.
