sterlang/examples/neg/n02.erlt
-module(n02).
%% circularity
f(T) -> f(fun f/1).
